Fix Color Contrast and Font in CSS

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -27,6 +27,7 @@ nav a,
     color: white;
     text-decoration: underline;
     margin-right: 20px;
+    font-size: large;
 }
 
 nav img,
